--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "goreit-front": {
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "goreit-front"
+    }
+  },
+  "defaultProject": "goreit-front",
+  "cli": {
+    "analytics": "de9436f8-03b3-4a7a-b7df-c4908190bd70"
+  }
 }
